# django-rest-framework-worksheet

./: .gitignore  README.md  pyproject.toml  requirements.txt  utils.py
config/: settings.py
notebooks/: 1. ModelViewSet 을 사용한 API 제작.ipynb  2. Router 의 기본적인 사용법.ipynb  3. 간단한 Serializer 사용법.ipynb  ipython_config.py
solves/tutorial/: model_view_set.py  router.py
