[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["Gil <sgy@tpay.co.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "2.*"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
notebook = "^6.1.5"
django-extensions = "^3.0.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
